--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,18 +22,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="br.com.mmall.main.MainActivity"
+            android:name="br.com.mmall.main.Splash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="br.com.mmall.main.MainActivity" />
         
          <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyANFci1LXAuoyjwr-vCbfIh_kcXuXtcHo8"/>
     
